# netgauge-gpui

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yml
netgauge-gui/: Cargo.toml
netgauge-gui/src/: declarative_ui.rs  main.rs
src/: lib.rs  main.rs
src/net/: format.rs  mod.rs  net.rs  net_linux.rs  net_macos.rs  net_windows.rs  tracker.rs
src/net/wan/: snmp.rs
